fix(mobile): tree view not working on mobile

--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -1208,7 +1208,6 @@ body.mobile #launcher-pane .dropdown-menu.show {
         bottom: 0;
         width: 85vw;
         padding-top: env(safe-area-inset-top);
-        transform: translateX(-100%);
         transition: transform 250ms ease-in-out;
         background: var(--main-background-color);
         z-index: 2000;
